WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187757
Fix message of NotSupportedError exception thrown during custom element creation
https://bugs.webkit.org/show_bug.cgi?id=187757
Summary
Fix message of NotSupportedError exception thrown during custom element creation
Frédéric Wang (:fredw)
Reported
2018-07-18 06:31:36 PDT
Fix message of NotSupportedError exception thrown during custom element creation
Attachments
Patch
(2.25 KB, patch)
2018-07-18 06:38 PDT
,
Frédéric Wang (:fredw)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews201 for win-future
(13.03 MB, application/zip)
2018-07-18 08:19 PDT
,
EWS Watchlist
no flags
Details
Patch for landing
(6.60 KB, patch)
2018-07-19 02:40 PDT
,
Frédéric Wang (:fredw)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang (:fredw)
Comment 1
2018-07-18 06:38:30 PDT
Created
attachment 345241
[details]
Patch
Frédéric Wang (:fredw)
Comment 2
2018-07-18 06:40:00 PDT
I guess we should really have a test to verify the text, but the tests from
bug 161528
just check the exceptions...
Yusuke Suzuki
Comment 3
2018-07-18 06:55:34 PDT
Comment on
attachment 345241
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=345241&action=review
> Source/WebCore/ChangeLog:13 > + No new tests, the exceptions are already tested but the actual text is non-standard.
Can we add a WebKit specific test validating these messages?
EWS Watchlist
Comment 4
2018-07-18 08:19:36 PDT
Comment on
attachment 345241
[details]
Patch
Attachment 345241
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8574796
New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 5
2018-07-18 08:19:48 PDT
Created
attachment 345247
[details]
Archive of layout-test-results from ews201 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews201 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Frédéric Wang (:fredw)
Comment 6
2018-07-19 02:40:01 PDT
Created
attachment 345340
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2018-07-19 03:19:36 PDT
Comment on
attachment 345340
[details]
Patch for landing Clearing flags on attachment: 345340 Committed
r233980
: <
https://trac.webkit.org/changeset/233980
>
WebKit Commit Bot
Comment 8
2018-07-19 03:19:37 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2018-07-19 03:21:15 PDT
<
rdar://problem/42375336
>
Frédéric Wang (:fredw)
Comment 10
2018-07-19 04:56:17 PDT
(In reply to Yusuke Suzuki from
comment #3
)
> Comment on
attachment 345241
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=345241&action=review
> > > Source/WebCore/ChangeLog:13 > > + No new tests, the exceptions are already tested but the actual text is non-standard. > > Can we add a WebKit specific test validating these messages?
Yeah, I was reluctant to duplicate existing tests but I did it when I landed this patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug