Fix message of NotSupportedError exception thrown during custom element creation https://bugs.webkit.org/show_bug.cgi?id=187757

Patch by Frederic Wang <fwang@igalia.com> on 2018-07-19
Reviewed by Yusuke Suzuki.

Source/WebCore:

In bug 161528, some new exceptions were introduced for custom element creation [1] but the
actual text has some issues. This patch fixes one typo and one wrong message.

[1] https://dom.spec.whatwg.org/#concept-create-element

Test: fast/custom-elements/exceptions-for-synchronous-custom-element-creation.html

* bindings/js/JSCustomElementInterface.cpp:
(WebCore::constructCustomElementSynchronously):

LayoutTests:

* fast/custom-elements/exceptions-for-synchronous-custom-element-creation-expected.txt: Added.
* fast/custom-elements/exceptions-for-synchronous-custom-element-creation.html: Added.

Canonical link: https://commits.webkit.org/202990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233980 268f45cc-cd09-0410-ab3c-d52691b4dbfc